# deep-pitch

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  langgraph.json  pyproject.toml  requirements.txt  run-019f53a0-3ae0-74c2-a726-e273c0c778ee.json
.github/workflows/: ci.yml
docs/: DEPLOY.md
scripts/: deploy-hf.sh
src/deep_pitch/: __init__.py  backtest.py  cli.py
src/deep_pitch/agent/: __init__.py  builder.py  graph.py
src/deep_pitch/api/: __init__.py  main.py  routes.py
src/deep_pitch/api/static/: index.html
src/deep_pitch/config/: __init__.py  fallback.py  models.py  observability.py  settings.py  tracing.py
src/deep_pitch/data/: __init__.py  loader.py
src/deep_pitch/domain/: __init__.py  schemas.py
src/deep_pitch/prompts/: __init__.py  historian.md  scout.md  system.md
src/deep_pitch/service/: __init__.py  predict.py  steps.py
src/deep_pitch/subagents/: __init__.py  historian.py  scout.py
src/deep_pitch/tools/: __init__.py  baseline.py  feed.py  reconcile.py  search.py
tests/: conftest.py  test_agent.py  test_api.py  test_backtest.py  test_baseline.py  test_cli.py  test_fallback.py  test_live.py  test_live_agent.py  test_live_feed.py  test_loader.py  test_models.py  test_observability.py  test_reconcile.py  test_schemas.py  test_search.py  test_service.py  test_settings.py  test_steps.py  test_tracing.py
